cmake_minimum_required(VERSION 3.16)
project(CodeForces)

set(CMAKE_CXX_STANDARD 11)

add_executable(71A Complete/71A.cpp)
add_executable(158A Complete/158A.cpp)
add_executable(4A Complete/4A.cpp)
add_executable(231A Complete/231A.cpp)
add_executable(50A Complete/50A.cpp)
add_executable(282A Complete/282A.cpp)
add_executable(112A Complete/112A.cpp)
add_executable(263A Complete/263A.cpp)
add_executable(339A Complete/339A.cpp)
add_executable(281A Complete/281A.cpp)
add_executable(266A Complete/266A.cpp)
add_executable(236A Complete/236A.cpp)
add_executable(546A Complete/546A.cpp)
add_executable(116A Complete/116A.cpp)
add_executable(791A Complete/791A.cpp)
add_executable(977A Complete/977A.cpp)
add_executable(617A Complete/617A.cpp)