cmake_minimum_required(VERSION 3.16)
project(CodeForces)

set(CMAKE_CXX_STANDARD 11)

add_executable(71A Complete/800/71A.cpp)
add_executable(158A Complete/800/158A.cpp)
add_executable(4A Complete/800/4A.cpp)
add_executable(231A Complete/800/231A.cpp)
add_executable(50A Complete/800/50A.cpp)
add_executable(282A Complete/800/282A.cpp)
add_executable(112A Complete/800/112A.cpp)
add_executable(263A Complete/800/263A.cpp)
add_executable(339A Complete/800/339A.cpp)
add_executable(281A Complete/800/281A.cpp)
add_executable(266A Complete/800/266A.cpp)
add_executable(236A Complete/800/236A.cpp)
add_executable(546A Complete/800/546A.cpp)
add_executable(116A Complete/800/116A.cpp)
add_executable(791A Complete/800/791A.cpp)
add_executable(977A Complete/800/977A.cpp)
add_executable(617A Complete/800/617A.cpp)
add_executable(266B Complete/800/266B.cpp)
add_executable(110A Complete/800/110A.cpp)
add_executable(41A Complete/800/41A.cpp)
add_executable(96A Complete/900/96A.cpp)
add_executable(160A Complete/900/160A.cpp)
add_executable(133A Complete/900/133A.cpp)
add_executable(580A Complete/900/580A.cpp)
add_executable(318A Complete/900/318A.cpp)